--- a/task-3.html
+++ b/task-3.html
@@ -39,6 +39,9 @@
       .text {
         animation: text 1.3s 9.5s ease-in-out forwards;
         animation-play-state: paused;
+        font-style: italic;
+        font-size: 1.5em;
+        color: red;
         transform: translateY(1200%);
       }
 
