--- a/task-3.html
+++ b/task-3.html
@@ -19,15 +19,20 @@
         display: flex;
         justify-content: space-between;
       }
+
       button {
         padding: 1em 3em;
         border-radius: 5px;
         color: white;
         font-size: 1.5em;
-        margin: 1em;
+        margin: 1.5em;
         background-color: rgb(41, 97, 41);
-        border: none;
         cursor: pointer;
+        z-index: 2;
+      }
+
+      .pressed {
+        box-shadow: 0px 0px 10px 7px black;
       }
 
       img {
@@ -90,13 +95,19 @@
       const $text = document.querySelector('.text');
 
       $playBtn.addEventListener('click', () => {
+        $playBtn.classList.add('pressed');
         $img.style.webkitAnimationPlayState = 'running';
         $text.style.webkitAnimationPlayState = 'running';
+
+        setTimeout(() => $playBtn.classList.remove('pressed'), 100);
       });
 
       $pauseBtn.addEventListener('click', () => {
+        $pauseBtn.classList.add('pressed');
         $img.style.webkitAnimationPlayState = 'paused';
         $text.style.webkitAnimationPlayState = 'paused';
+
+        setTimeout(() => $pauseBtn.classList.remove('pressed'), 100);
       });
     </script>
   </body>
